# zeoran

./: .gitignore  CMakeLists.txt  INSTALLATION.md  Makefile  README.md  cif_charges_config.yaml  compare_lta_files.py  demo_workflow.sh  developer_notes.md  example_gro_config.yaml  example_gro_usage.py  generate.input  global.h  globals.cpp  headers.h  install_traditional_make.sh  install_with_cmake.sh  libraries.h  output.cpp  output.h  preprocess  preprocess_cif.py  zeoran.cpp
tests/: README.md  compare_benchmarks.sh  compare_structures.py  create_benchmarks.sh  run_tests.sh  test_cif_processing.sh
tests/benchmark_inputs/: FAU_chains.input  MFI_chains.input  MOR_chains.input  MOR_clusters.input  MOR_merw.input  MOR_random.input
tests/benchmark_reference/FAU_chains/: FAU_chains_0.cif  FAU_chains_1.cif  FAU_chains_2.cif  FAU_chains_3.cif  FAU_chains_4.cif
tests/benchmark_reference/MFI_chains/: MFI_chains_0.cif  MFI_chains_1.cif  MFI_chains_2.cif  MFI_chains_3.cif  MFI_chains_4.cif
tests/benchmark_reference/MOR_chains/: MOR_chains_0.cif  MOR_chains_1.cif  MOR_chains_2.cif  MOR_chains_3.cif  MOR_chains_4.cif
tests/benchmark_reference/MOR_clusters/: MOR_clusters_0.cif
tests/benchmark_reference/MOR_merw/: MOR_merw_1.cif  MOR_merw_2.cif  MOR_merw_3.cif
tests/benchmark_reference/MOR_random/: MOR_random_4.cif
zeoran_data/cif_files/: Framework_0_initial_1_1_1_P1.cif
